cabal-version: 2.4
name:          chart-svg-various
version:       0.1.0
synopsis: Various chart-svg extensions and defaults.
description: A repository of chart-svg ideas, defaults and bric-a-brac that never made it to the main library.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/chart-svg-various#readme
bug-reports: https://github.com/tonyday567/chart-svg-various/issues
build-type: Simple
extra-doc-files:
  other/*.svg
source-repository head
  type: git
  location: https://github.com/tonyday567/chart-svg-various

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <5,
    bytestring,
    chart-svg >= 0.4,
    optics-core,
    numhask,
    numhask-array,
    numhask-space,
    mealy,
    text >= 1.2 && < 2.1,
    time >= 1.9,
    transformers >= 0.5,
    vector >= 0.12 && < 0.13,
    flatparse,
    containers,
    profunctors,
    formatn
  exposed-modules:
    Chart.Any
    Chart.Various.Examples
    Chart.Mealy
    Chart.Various
  other-modules:
  default-language: Haskell2010

