cabal-version: 3.0
name: prettychart
version: 0.4.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2023
category: graphics
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/prettychart#readme
bug-reports: https://github.com/tonyday567/prettychart/issues
synopsis: Pretty print charts from ghci.
description:
  Serve and print charts from ghci or from an svg file, with automatic formatting.

build-type: Simple
tested-with:
  ghc ==9.10.2
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  other/*.svg
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/prettychart

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    async >=2.2.4 && <2.3,
    base >=4.14 && <5,
    binary >=0.8 && <0.9,
    bytestring >=0.11.3 && <0.13,
    chart-svg >=0.8 && <0.9,
    containers >=0.6 && <0.9,
    http-types >=0.12 && <0.13,
    numhask-space >=0.10 && <0.14,
    optics-core >=0.4 && <0.5,
    text >=1.2 && <2.2,
    time >=1.9 && <1.16,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.5,

  exposed-modules:
    Prettychart
    Prettychart.Any
    Prettychart.Charts
    Prettychart.Server

executable prettychart-serve
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  default-language: GHC2024
  main-is: prettychart-serve.hs
  hs-source-dirs: app
  build-depends:
    async >=2.2.4 && <2.3,
    base >=4.14 && <5,
    binary >=0.8 && <0.9,
    bytestring >=0.11.3 && <0.13,
    chart-svg >=0.8 && <0.9,
    filepath >=1.4 && <1.6,
    fsnotify >=0.4.1 && <0.5,
    http-types >=0.12 && <0.13,
    optics-core >=0.4.1 && <0.5,
    optparse-applicative >=0.17 && <0.20,
    prettychart,
    process >=1.6 && <1.7,
    text >=1.2 && <2.2,
    time >=1.9 && <1.16,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.5,

  ghc-options: -O2
